[gd_scene load_steps=2 format=3 uid="uid://bpfaegxh3458o"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_56xud"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_56xud")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Fullscreen" type="CheckButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Fullscreen" to="." method="_on_fullscreen_button_down"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Fullscreen" to="." method="_on_fullscreen_button_up"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
